--- a/time-off-management/src/main/resources/templates/admin-home.html
+++ b/time-off-management/src/main/resources/templates/admin-home.html
@@ -132,6 +132,10 @@ label {
 		margin-left: 15px;
 	}
 	
+	.mar{
+		margin-left: 15px;
+	}
+	
 	.my-row {
 	--bs-gutter-x: 2rem !important;
 }
@@ -248,9 +252,9 @@ label {
 			</form>
 		</div>
 
-		<div class="row ml-5" id="noRequests" style="display: none;">
+		<div class="row mar" id="noRequests" style="display: none;">
 			<div class="col-1"></div>
-			<div class="col-10 nocard">
+			<div class="col-10 nocard ">
 				<h5>No Pending Leave Requests</h5>
 				<p>There are currently no pending leave requests.</p>
 			</div>
