--- a/time-off-management/src/main/resources/templates/position-list.html
+++ b/time-off-management/src/main/resources/templates/position-list.html
@@ -313,7 +313,7 @@ body {
 
 								<p class="card-text">
 									<strong><i class="fas fa-calendar-alt icon"></i>
-										Annual Leaves:</strong> <span th:text="${position.sickLeaves}"></span>
+										Sick Leaves:</strong> <span th:text="${position.sickLeaves}"></span>
 								</p>
 
 								<p class="card-text">
