--- a/time-off-management/src/main/resources/templates/leave-balance.html
+++ b/time-off-management/src/main/resources/templates/leave-balance.html
@@ -27,16 +27,15 @@ span {
 </head>
 
 <body layout:fragment="content">
-
 	<div class="m-4">
 
 
 		<div class="container">
 			<header class="header mb-5">
 				<h2 class="brand-title" style="color: #000;">Leave Balance</h2>
-				<h6 style="color: #000;"
-					class="text-muted d-sm-block d-md-block d-lg-block mt-3">Here're
-					your remaining leaves</h6>
+		<!--  <h6 style="color: #000;"
+				class="text-muted d-sm-block d-md-block d-lg-block mt-3">Here're
+					your remaining leaves</h6>-->
 
 				<div class="mt-5 mb-5 ">
 					<span th:each="leaveEntry : ${leaveCounts}"
