--- a/time-off-management/src/main/resources/templates/leave-request.html
+++ b/time-off-management/src/main/resources/templates/leave-request.html
@@ -225,6 +225,8 @@ label {
 								<h6 class="dropdown-item" th:text="${email}"
 									style="font-size: 14px"></h6>
 							</li>
+							<li><a th:href="@{/change-password}" id="signoutLink"
+								class="dropdown-item">Change Password</a></li>
 
 							<li><a th:href="@{/logout}" id="signoutLink"
 								style="font-size: 14px" class="dropdown-item">Log out</a></li>
